<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/text7"
        android:textAppearance="@style/text7"
        android:translationY="-0.85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/text10"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:text="@string/text10"
        android:textAppearance="@style/text10"
        android:lineSpacingExtra="-5sp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginStart="253dp"
        app:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/text9"
        android:layout_width="47dp"
        android:layout_height="27dp"
        android:text="@string/text9"
        android:textAppearance="@style/text9"
        android:lineSpacingExtra="27sp"
        android:translationY="-13.45dp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginStart="16dp"
        app:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="238dp"
        android:layout_height="90dp"
        android:text="@string/text8"
        android:textAppearance="@style/text8"
        android:lineSpacingExtra="15sp"
        android:translationY="-7.4dp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginStart="14dp"
        app:layout_marginTop="3dp" />

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="332dp"
        android:layout_height="90dp"
        android:background="@drawable/rectangle_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="0dp"
        android:layout_height="82.43dp"
        android:layout_marginBottom="-0.43dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/group_2"
        android:layout_width="51dp"
        android:layout_height="27dp"
        android:layout_marginStart="366dp"
        android:layout_marginTop="73dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/group1"
        android:layout_width="51dp"
        android:layout_height="27dp"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="42dp"
        android:layout_height="18dp"
        android:text="@string/text6"
        android:textAppearance="@style/text6"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.74dp"
        android:gravity="center_horizontal|top"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="0dp"
        android:layout_height="16.29dp"
        android:layout_marginBottom="24.71dp"
        android:text="@string/text5"
        android:textAppearance="@style/text5"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.34dp"
        android:gravity="center_horizontal|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="0dp"
        android:layout_height="16.29dp"
        android:layout_marginBottom="24.71dp"
        android:text="@string/text4"
        android:textAppearance="@style/text4"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.34dp"
        android:gravity="center_horizontal|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_height="16.29dp"
        android:layout_marginBottom="24.71dp"
        android:text="@string/text3"
        android:textAppearance="@style/text3"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.34dp"
        android:gravity="center_horizontal|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="16.29dp"
        android:layout_marginBottom="24.71dp"
        android:text="@string/text2"
        android:textAppearance="@style/text2"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.34dp"
        android:gravity="center_horizontal|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="16.29dp"
        android:layout_marginBottom="24.71dp"
        android:text="@string/text1"
        android:textAppearance="@style/text1"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.34dp"
        android:gravity="center_horizontal|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="0dp"
        android:layout_height="46.01dp"
        android:layout_marginBottom="22.57dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="0dp"
        android:layout_height="4.72dp"
        android:layout_marginBottom="387.74dp"
        android:background="@drawable/rectangle_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="60dp"
        android:layout_height="27dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.1"
        />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#D9D9D9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>